--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,42 +1,42 @@
 @font-face {
-  font-family: 'PortArthur';
+  font-family: PortArthur;
   font-style: normal;
   font-weight: 400;
-  src:  url('/src/fonts/Port-Arthur.woff') format('woff'),
-  url('/src/fonts/Port-Arthur.ttf') format('tryetype');
+  src:  url('/fonts/port-arthur.woff') format('woff'),
+  url('/fonts/port_arthur.ttf') format('tryetype');
 }
 @font-face {
-  font-family: 'RobotoThin';
+  font-family: RobotoThin;
   font-style: normal;
   font-weight: 100;
-  src:  url('/src/fonts/Roboto-Thin.woff') format('woff'),
-  url('/src/fonts/Roboto-Thin.ttf') format('tryetype');
+  src:  url('/fonts/Roboto-Thin.woff') format('woff'),
+  url('/fonts/Roboto-Thin.ttf') format('tryetype');
 }
 @font-face {
-  font-family: 'RobotoLight';
+  font-family: RobotoLight;
   font-style: normal;
   font-weight: 300;
-  src:  url('/src/fonts/Roboto-Light.woff') format('woff'),
-  url('/src/fonts/Roboto-Light.ttf') format('tryetype');
+  src:  url('/fonts/Roboto-Light.woff') format('woff'),
+  url('/fonts/Roboto-Light.ttf') format('tryetype');
 }
 @font-face {
-  font-family: 'RobotoRegular';
+  font-family: RobotoRegular;
   font-style: normal;
   font-weight: 500;
-  src:  url('/src/fonts/Roboto-Regular.woff') format('woff'),
-  url('/src/fonts/Roboto-Regular.ttf') format('tryetype');
+  src:  url('/fonts/Roboto-Regular.woff') format('woff'),
+  url('/fonts/Roboto-Regular.ttf') format('tryetype');
 }
 @font-face {
-  font-family: 'RobotoMedium';
+  font-family: RobotoMedium;
   font-style: normal;
   font-weight: 600;
-  src:  url('/src/fonts/Roboto-Medium.woff') format('woff'),
-  url('/src/fonts/Roboto-Medium.ttf') format('tryetype');
+  src:  url('/fonts/Roboto-Medium.woff') format('woff'),
+  url('/fonts/Roboto-Medium.ttf') format('tryetype');
 }
 @font-face {
-  font-family: 'RobotoBold';
+  font-family: RobotoBold;
   font-style: normal;
   font-weight: 800;
-  src:  url('/src/fonts/Roboto-Bold.woff') format('woff'),
-  url('/src/fonts/Roboto-Bold.ttf') format('tryetype');
+  src:  url('/fonts/Roboto-Bold.woff') format('woff'),
+  url('/fonts/Roboto-Bold.ttf') format('tryetype');
 }
