--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -7,6 +7,7 @@ $font-family--light: RobotoLight, sans-serif;
 $font-family--regular: RobotoRegular, sans-serif;
 $font-family--medium: RobotoMedium, sans-serif;
 $font-family--bold: RobotoBold, sans-serif;
+$font-family--logo: PortArthur, sans-serif;
 
 $font-size--base: 15px!default;
 $font-size--medium: $font-size--base * 1.29;
