--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,28 +1,78 @@
+.wrapper-hero {
+  min-height: 60vh;
+  background: url(/images/background_web.jpg) 100% 100% no-repeat;
+  background-size: cover;
+}
+
 header {
   padding: 20px 0;
+  @include clearfix;
   .logo {
-    @include make-lg-column(4);
+    @include make-lg-column(3);
     &-img {
       float: left;
-      margin-right: 20px;
+      img {
+        max-width: 140px;
+        margin-top: 5px;
+      }
     }
     &-title {
+      float: left;
       margin-top: 20px;
+      font: 25px/30px $font-family--logo;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+    &-description {
+      float: left;
+      max-width: 46%;
+      font-size: 13px;
+      line-height: 17px;
+      margin-top: 10px;
+
     }
   }
 }
 .navigation {
-  display: none;
+  @include make-lg-column(6);
+  margin-top: 45px;
+  li {
+    display: inline-block;
+    vertical-align: middle;
+    &:first-child a {
+      padding: 0 9px 0 0;
+    }
+    &:last-child a {
+      padding: 0 0 0 9px;
+    }
+    a {
+      padding: 0 9px;
+      font-size: 15px;
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #000000;
+    }
+  }
 }
-.navigation-btn__icon {
-  width: 30px;
-  height: 30px;
-}
-.logo-img img {
-  width: 150px;
-}
-.logo-title {
-  font: 25px/30px $font-family--logo;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+.phone {
+  @include make-lg-column(3);
+  margin-top: 20px;
+  text-align: right;
+  a {
+    display: block;
+    font-family: $font-family--light;
+    color: #000000;
+    text-decoration: none;
+    font-size: 25px;
+    line-height: 30px;
+
+  }
+  &-callback {
+    span {
+      vertical-align: middle;
+      &:last-child {
+        color: #96be0f;
+      }
+    }
+  }
 }
